test/bad/it_ab.iml
type a = A
type b = B 
;;

let id = Lam 'a. fun (x : 'a) -> x in
let err = id [a] B in
err
